# RIDOS-Core

.github/workflows/: build-iso.yml  main.yml
build-system/scripts/: apply-branding.py  build-ridos-welcome.sh  configure-calamares.py  configure-system.py  install-ridos-files.py  install-ridos-files.sh  ridos-installer.py  write-grub-config.py
extras/: install-ollama.sh  panic-key.py
legal/: CONTRIBUTORS.md  COPYRIGHT  LICENSE.txt
ridos-core/: ai_daemon.py  ridos-help.py  ridos-installer-gui.py  ridos-installer.desktop  ridos-installer.py  ridos_shell.py  welcome-app.py
ridos-core/calamares/: settings.conf
ridos-core/calamares/branding/ridos/: branding.desc  show.qml
ridos-core/calamares/modules/: bootloader.conf  locale.conf  packages.conf  partition.conf  removeuser.conf  unpackfs.conf  users.conf  welcome.conf
ridos-welcome/: Cargo.toml
ridos-welcome/src/: main.rs
